--- a/static/scss/modules/_variables.scss
+++ b/static/scss/modules/_variables.scss
@@ -1,6 +1,6 @@
 $bg-color: #292d33;
 $bg-dark-color: #22262b;
-$comment-text-color: #5d636e;
+$text-comment-color: #5d636e;
 $text-color: #acb3be;
 $text-violet-color: #bb85d9;
 $text-red-color: #d3747a;
