--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -1,5 +1,44 @@
 @import "./modules/variables";
 
-body {
-  background-color: $bg-color;
+* {
+  margin: 0;
+  padding: 0;
+  transition: all 0.3s ease;
 }
+body {
+  background-color: $bg-dark-color;
+  font-family: monospace;
+  color: $text-color;
+  font-weight: 400;
+  font-size: 15px;
+}
+h1, h2, h3, h4, h5, h6, p {
+  font-weight: 400;
+}
+h1 {
+  font-size: 3em;
+}
+h2 {
+  font-size: 2.4em;
+}
+h3 {
+  font-size: 2em;
+}
+h4 {
+  font-size: 1.6em;
+}
+h5 {
+  font-size: 1.2em;
+}
+h6 {
+    font-size: 1em;
+}
+p {
+  font-size: 1em;
+}
+ul, li {
+  list-style: none;
+}
+
+@import "./modules/grid";
+@import "./modules/typography";
