--- a/static/scss/modules/_typography.scss
+++ b/static/scss/modules/_typography.scss
@@ -1,3 +1,18 @@
 .text-comment {
   color: $text-comment-color;
 }
+.text-orange {
+  color: $text-orange-color;
+}
+.text-red {
+  color: $text-red-color;
+}
+.text-green {
+  color: $text-green-color;
+}
+.text-violet {
+  color: $text-violet-color;
+}
+.text-blue {
+  color: $text-blue-color;
+}
