--- a/static/scss/modules/_variables.scss
+++ b/static/scss/modules/_variables.scss
@@ -1,10 +1,20 @@
-$bg-color: #292d33;
+$bg-default-color: #292d33;
+$text-default-color: #292d33;
 $bg-dark-color: #22262b;
+$text-dark-color: #22262b;
+$bg-comment-color: #5d636e;
 $text-comment-color: #5d636e;
-$text-color: #acb3be;
+$bg-white-color: #acb3be;
+$text-white-color: #acb3be;
+$bg-violet-color: #bb85d9;
 $text-violet-color: #bb85d9;
+$bg-red-color: #d3747a;
 $text-red-color: #d3747a;
+$bg-green-color: #a1be7f;
 $text-green-color: #a1be7f;
-$text-orange-color: #a1be7f;
+$bg-orange-color: #ca9a6f;
+$text-orange-color: #ca9a6f;
+$bg-yellow-color: #e1bf85;
 $text-yellow-color: #e1bf85;
+$bg-blue-color: #587ebb;
 $text-blue-color: #587ebb;
