--- a/static/scss/modules/_media.scss
+++ b/static/scss/modules/_media.scss
@@ -11,6 +11,9 @@ $break-medium: 768px;
   .ims-commit-table table .spacer {
     margin-bottom: 10px;
   }
+  .ims-cht-section ul li a {
+    margin: 0 5px;
+  }
 }
 
 @media screen and (max-width: $break-small) {
