--- a/static/scss/modules/_media.scss
+++ b/static/scss/modules/_media.scss
@@ -11,9 +11,6 @@ $break-medium: 768px;
   .ims-commit-table table .spacer {
     margin-bottom: 10px;
   }
-  .ims-cht-section ul li a {
-    margin: 0 5px;
-  }
 }
 
 @media screen and (max-width: $break-small) {
@@ -25,5 +22,8 @@ $break-medium: 768px;
   }
   .ims-container {
     width: 92%;
+  }
+  .ims-cht-section ul li a {
+    margin: 0;
   }
 }
