SCSS Redefined and Build pushed

--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -18,3 +18,6 @@ $bg-yellow-color: #e1bf85;
 $text-yellow-color: #e1bf85;
 $bg-blue-color: #587ebb;
 $text-blue-color: #587ebb;
+
+$break-small: 425px;
+$break-medium: 768px;
