--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,51 +1,6 @@
 @import "./modules/variables";
-
-* {
-  margin: 0;
-  padding: 0;
-}
-body {
-  background-color: $bg-dark-color;
-  font-family: monospace;
-  color: $text-white-color;
-  font-weight: 400;
-  font-size: 15px;
-}
-h1, h2, h3, h4, h5, h6, p {
-  font-weight: 400;
-}
-h1 {
-  font-size: 3em;
-}
-h2 {
-  font-size: 2.4em;
-}
-h3 {
-  font-size: 2em;
-}
-h4 {
-  font-size: 1.6em;
-}
-h5 {
-  font-size: 1.3em;
-}
-h6 {
-    font-size: 1em;
-}
-p {
-  font-size: 1em;
-}
-pre {
-  white-space: pre-wrap;
-  line-height: 18px;
-}
-td {
-    vertical-align: baseline;
-}
-ul, li {
-  list-style: none;
-}
-
+@import "./modules/base";
 @import "./modules/grid";
 @import "./modules/typography";
 @import "./modules/shared";
+@import "./modules/media";
