Slot Portfolio template style added and bootstrap css commented

--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -19,5 +19,11 @@ $text-yellow-color: #e1bf85;
 $bg-blue-color: #587ebb;
 $text-blue-color: #587ebb;
 
+$bg-window-color: #ebeaeb;
+$bg-window-ico-red-color: #ee5d55;
+$bg-window-ico-yellow-color: #f8bd45;
+$bg-window-ico-green-color: #5eca42;
+
 $break-small: 425px;
 $break-medium: 768px;
+$break-large: 992px;
